--- a/templates/config.yaml
+++ b/templates/config.yaml
@@ -1,3 +1,3 @@
-default:
-  extension: .micro
-  output: colorschemes
+micro-base16:
+  filename: themes/micro/colorschemes/{{ scheme-system }}-{{ scheme-slug }}.micro
+  supported-systems: [base16]
